Deployed  with MkDocs version: 1.6.1

--- a/trabalho_final_aps.html
+++ b/trabalho_final_aps.html
@@ -661,14 +661,14 @@
 <p>O sistema contará com cinco módulos principais:</p>
 <ul>
 <li><strong>Interface do Usuário</strong>: Módulo para navegação, onde o usuário poderá interagir com a plataforma e explorar as recomendações.</li>
-<li><strong>Módulo de Autenticação</strong>: Controle de acesso para garantir que os dados e recomendações sejam personalizados para cada usuário.</li>
+<li><strong>Módulo de Avaliações</strong>: Processará dados das avaliações dos usuários para armazenar no banco de dados e fornecê-los aos outros usuários.</li>
 <li><strong>Módulo de Recomendações</strong>: Utilizando uma API de inteligência artificial, processará dados do histórico e das preferências do usuário para gerar recomendações personalizadas.</li>
 <li><strong>API IA</strong>: Irá se basear em dados fornecidos pelos outros módulos como histórico, avaliações, recomendações e amizades para que uma recomendação de jogo seja gerada por meio de uma IA.</li>
 <li><strong>Banco de Dados</strong>: Armazenará informações dos jogos e dos perfis dos usuários, facilitando o processamento de recomendações e o histórico.</li>
 </ul>
 </blockquote>
 <h3 id="contexto-de-aplicacao">Contexto de Aplicação</h3>
-<p>O sistema será desenvolvido para atender a um público diverso, desde jogadores casuais até gamers mais experientes que buscam recomendações confiáveis para otimizar o seu tempo de lazer. A ferramenta também poderá ser útil para empresas desenvolvedoras de jogos, fornecendo insights sobre tendências e preferências do público.</p>
+<p>O sistema será desenvolvido para atender a um público diverso, desde jogadores casuais os mais experientes que buscam recomendações confiáveis para seu tempo de lazer. A ferramenta também poderá ser útil para empresas desenvolvedoras de jogos, fornecendo insights sobre tendências e preferências do público.</p>
 <p>Em resumo, o sistema de recomendações de jogos representa uma solução moderna que conecta jogadores e contribui para um mercado de entretenimento mais acessível e adaptado às necessidades dos usuários.</p>
 <hr />
 <h2 id="1-planejamento-e-definicao-de-requisitos">1. Planejamento e Definição de Requisitos</h2>
@@ -750,7 +750,7 @@
 <li>
 <p><strong>Portabilidade</strong>  </p>
 <ul>
-<li>O sistema deve ser compatível com navegadores comjns (Chrome, Firefox, Safari) e ser responsivo em dispositivos móveis.</li>
+<li>O sistema deve ser compatível com navegadores comuns (Chrome, Firefox, Safari) e ser responsivo em dispositivos móveis.</li>
 </ul>
 </li>
 <li>
