Deployed  with MkDocs version: 1.6.1

--- a/trabalho_final_aps.html
+++ b/trabalho_final_aps.html
@@ -762,7 +762,7 @@
 <li>
 <p><strong>Confiabilidade</strong>  </p>
 <ul>
-<li>O sistema deve apresentar uptime de pelo menos 99,5% mensalmente, com monitoramento para identificar falhas rapidamente.</li>
+<li>O sistema deve apresentar um bom uptime mensal, com monitoramento para identificar falhas rapidamente.</li>
 </ul>
 </li>
 <li>
