Deployed  with MkDocs version: 1.6.1

--- a/trabalho_final_aps.html
+++ b/trabalho_final_aps.html
@@ -768,7 +768,7 @@
 <li>
 <p><strong>Integração</strong>  </p>
 <ul>
-<li>Deve ser possível integrar o sistema com APIs de terceiros (como IBM Watson ou Recombee) para IA e dados adicionais.</li>
+<li>Deve ser possível integrar o sistema com APIs IA de terceiros para que seja realizado o cálculo de recomendação.</li>
 </ul>
 </li>
 </ol>
